# nodetool-lib-audio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-wheel.yml  test.yml
src/nodetool/dsl/lib/: pedalboard.py  synthesis.py
src/nodetool/dsl/lib/librosa/: analysis.py  segmentation.py
src/nodetool/examples/nodetool-audio/: Remove Silence.json
src/nodetool/nodes/lib/: pedalboard.py  synthesis.py
src/nodetool/nodes/lib/audio/: synthesis.py
src/nodetool/nodes/lib/audio/librosa/: analysis.py
src/nodetool/nodes/lib/librosa/: analysis.py
src/nodetool/package_metadata/: nodetool-lib-audio.json
tests/: conftest.py  test_metadata.py
tests/nodes/lib/: test_additional_coverage.py  test_audio_analysis.py  test_audio_effects.py  test_audio_segmentation.py  test_spectral_centroid.py  test_synthesis_nodes.py
tests/nodes/lib/audio/: README.md  __init__.py  test_audio_analysis.py  test_audio_conversion.py  test_audio_effects.py  test_audio_segmentation.py  test_transform.py
