[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-lib-audio"
version = "0.6.2-rc.18"
description = "Nodetool Audio nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core==0.6.2-rc.18",
    # Media dependencies
    "pydub==0.25.1",
    "librosa>=0.10.2",
    "pedalboard==0.9.16",
]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.2-rc.18"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-lib-audio.json",
    "src/nodetool/assets/nodetool-lib-audio/Segment Audio.jpg",
    "package_metadata/nodetool-lib-audio.json",
    "assets/nodetool-lib-audio/Segment Audio.jpg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
