[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-lib-audio"
version = "0.6.3-rc.24"
description = "Nodetool Audio nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core==0.6.3-rc.24",
    # Media dependencies
    "pydub==0.25.1",
    "librosa>=0.10.2",
    "numba>=0.62.1",
    "pedalboard==0.9.16",
]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.3-rc.24"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.1",
    "moto>=5.0.3",
    "aioresponses>=0.7.8",
    "black>=24.10.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.4",
    "numba>=0.63.1"
]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
include = [
    "src/nodetool/package_metadata/*.json",
    "src/nodetool/assets/**/*.jpg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
